add front and cognito part

--- a/cloud-front/src/app/modules/layout/navbar/navbar.component.html
+++ b/cloud-front/src/app/modules/layout/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
   <span class="logo">Netlix</span>
   <div>
-    <button mat-button>Prva opcija</button>
-    <button mat-button>Druga opcija</button>
+    <button (click)="getMovie()" mat-button>GET MOVIES PROVERA DA LI RADI</button>
+    <button (click)="Login()" mat-button>Login</button>
+    <button (click)="Signup()" mat-button>Sign up</button>
   </div>
 </mat-toolbar>
