--- a/cloud-front/src/app/modules/movie/movie-card/movie-card.component.css
+++ b/cloud-front/src/app/modules/movie/movie-card/movie-card.component.css
@@ -5,7 +5,7 @@
   background-color: #c94141;
   padding: 20px;
   border-radius: 10px;
-  height: 300px;
+  /*height: 300px;*/
   width: 350px;
 }
 
