add ful cognito, shoud add email verification and edit status confirmed

--- a/cloud-front/src/app/modules/auth/login/login.component.html
+++ b/cloud-front/src/app/modules/auth/login/login.component.html
@@ -1,10 +1,25 @@
-<amplify-authenticator [loginMechanisms]="['email']" [formFields]="formFields" [signUpAttributes]="['name']">
-  <ng-template>
-    amplifySlot = "authenticated"
-    let-user ="user"
-    let-signOut = "signOut"
-    <h1>Welcome</h1>
-    <button></button>
-  </ng-template>
-</amplify-authenticator>
+<!--<amplify-authenticator [loginMechanisms]="['email']" [formFields]="formFields" [signUpAttributes]="['name']">-->
+<!--  <ng-template>-->
+<!--    amplifySlot = "authenticated"-->
+<!--    let-user ="user"-->
+<!--    let-signOut = "signOut"-->
+<!--    <h1>Welcome</h1>-->
+<!--    <button></button>-->
+<!--  </ng-template>-->
+<!--</amplify-authenticator>-->
 
+<!-- login.component.html -->
+<div>
+  <h2>Login</h2>
+  <form (ngSubmit)="onLogin()">
+    <div>
+      <label for="username">Username</label>
+      <input type="text" id="username" [(ngModel)]="loginUsername" name="username" required>
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input type="password" id="password" [(ngModel)]="loginPassword" name="password" required>
+    </div>
+    <button type="submit">Login</button>
+  </form>
+</div>
