--- a/cloud-front/src/app/modules/auth/confirm-email/confirm-email.component.css
+++ b/cloud-front/src/app/modules/auth/confirm-email/confirm-email.component.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  /*background-color: #f4f4f4;*/
   margin: 0;
   display: flex;
   justify-content: center;
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-  background-color: #fff;
+  /*background-color: #fff;*/
   padding: 20px 40px; /* Povećao padding za bolji izgled */
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,32 +35,43 @@ form {
 label {
   margin-bottom: 5px;
   color: #333;
-  margin-left:25%
+  margin-left: 25%;
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 50%;
   box-sizing: border-box; /* Osigurava da padding ne proširi input van width */
-  margin-left:25%
+  margin-left: 25%;
 }
 
 button {
   padding: 10px;
   background-color: #007bff;
   border: none;
-  color: white;
+  color: #007bff;
   border-radius: 4px;
   cursor: pointer;
   width: 50%; /* Puna širina za dugme */
   box-sizing: border-box;
-  margin-left:25%
+  margin-left: 25%;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #146b30;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+p {
+  text-align: center;
+  color: #333;
 }
