--- a/cloud-front/src/app/modules/auth/register/register.component.css
+++ b/cloud-front/src/app/modules/auth/register/register.component.css
@@ -1,45 +1,67 @@
-.main-div mat-card{
-  padding: 0;
-}
-
-.signup-form{
-  padding: 20px;
-  background-color:#ADD8E6;
-}
-
-.signup-toolbar{
-  display: flex;
-  justify-content: center;
-  background-color:#D9D9D9;
-}
-
-.signup-button{
-  padding: 20px;
-  background-color:#D9D9D9;
-}
-
-.centered-text {
-  text-align: center;
-}
-.mat-app-background {
-  background-color: #2E8EE3;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.mat-card-margine{
-  margin-top: 50px;
-  margin-bottom: 50px;
+  height: 100vh;
 }
 
-.radio-buttons{
+.container {
+  background-color: #fff;
+  padding: 20px 40px; /* Povećao padding za bolji izgled */
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px; /* Maksimalna širina za formu */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
   margin-bottom: 20px;
 }
 
-.radio-group {
+form {
+  display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
-.white-text {
+label {
+  margin-bottom: 5px;
+  color: #333;
+  margin-left: 25%;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 50%;
+  box-sizing: border-box; /* Osigurava da padding ne proširi input van width */
+  margin-left: 25%;
+}
+
+button {
+  padding: 10px;
+  background-color: #007bff;
+  border: none;
   color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 50%; /* Puna širina za dugme */
+  box-sizing: border-box;
+  margin-left: 25%;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
