add front for search, movies details and edit lambdas

--- a/cloud-front/src/app/modules/layout/navbar/navbar.component.html
+++ b/cloud-front/src/app/modules/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span class="logo">Netlix</span>
+  <span class="logo" (click)="toHome()">Netlix</span>
   <div>
     <button (click)="getMovie()" mat-button>GET MOVIES PROVERA DA LI RADI</button>
     <button (click)="Login()" mat-button>Login</button>
