--- a/cloud-front/src/app/modules/movie/movie-card/movie-card.component.html
+++ b/cloud-front/src/app/modules/movie/movie-card/movie-card.component.html
@@ -1,9 +1,9 @@
 <div class="movie-card">
   <h3>NAME</h3>
   <div class="actions">
-    <button class="btn" >Play</button>
-    <button class="btn">Download</button>
-    <button class="btn">Delete</button>
-    <button class="btn">Edit</button>
+    <button class="btn" (click)="toDetails('Inception')">Play</button>
+<!--    <button class="btn">Download</button>-->
+<!--    <button class="btn">Delete</button>-->
+<!--    <button class="btn">Edit</button>-->
   </div>
 </div>
