add download front

--- a/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
+++ b/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="movie-actions">
       <button class="movie-button">Play</button>
-      <button class="movie-button">Add to Watchlist</button>
+      <button class="movie-button" (click)="download()">Download</button>
     </div>
   </div>
 </div>
