--- a/cloud-front/src/app/modules/layout/navbar/navbar.component.html
+++ b/cloud-front/src/app/modules/layout/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar color="primary">
   <span class="logo" (click)="toHome()">Netlix</span>
   <div>
-    <button (click)="getMovie()" mat-button>GET MOVIES PROVERA DA LI RADI</button>
+    <button (click)="UploadVideo()" mat-button>Upload</button>
+<!--    <button (click)="getMovie()" mat-button>GET MOVIES PROVERA DA LI RADI</button>-->
+    <button (click)="Subscribe()" mat-button>Subscribe</button>
     <button (click)="Login()" mat-button>Login</button>
     <button (click)="Signup()" mat-button>Sign up</button>
   </div>
