dynamicly load cards of movies

--- a/cloud-front/src/app/modules/movie/movie-card/movie-card.component.html
+++ b/cloud-front/src/app/modules/movie/movie-card/movie-card.component.html
@@ -1,7 +1,6 @@
-<app-search/>
 <div class="movie-card">
-  <h3>NAME</h3>
+  <h3>{{ movie.title }}</h3>
   <div class="actions">
-    <button class="btn" (click)="toDetails('Inception')">View details</button>
+    <button class="btn" (click)="toDetails(movie.movie_id)">View details</button>
   </div>
 </div>
