dynamicly load all details and download movie done

--- a/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
+++ b/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
@@ -8,12 +8,12 @@
     </div>
   </div>
   <div class="movie-details">
-    <h2 class="movie-title">Inception</h2>
-    <p class="movie-description">A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O.</p>
+    <h2 class="movie-title">{{movie?.title}}</h2>
+    <p class="movie-description">{{movie?.description}}</p>
     <div class="movie-metadata">
-      <p><strong>Director:</strong> Christopher Nolan</p>
-      <p><strong>Actor:</strong> Leonardo DiCaprio</p>
-      <p><strong>Genre:</strong> Action, Sci-Fi, Thriller</p>
+      <p><strong>Director:</strong>{{movie?.director}}</p>
+      <p><strong>Actor:</strong>{{movie?.actors}}</p>
+      <p><strong>Genre:</strong>{{movie?.genres}}</p>
     </div>
     <div class="movie-actions">
       <button class="movie-button" (click)="edit()">Edit</button>
