--- a/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
+++ b/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
@@ -19,6 +19,7 @@
       <button class="movie-button" (click)="edit()">Edit</button>
       <button class="movie-button" (click)="delete()">Delete</button>
       <button class="movie-button" (click)="download()">Download</button>
+      <button class="movie-button" (click)="review()">Review</button>
     </div>
   </div>
 </div>
