--- a/cloud-front/src/app/modules/movie/movie-cards/movie-cards.component.html
+++ b/cloud-front/src/app/modules/movie/movie-cards/movie-cards.component.html
@@ -1,5 +1,5 @@
+<app-navbar></app-navbar>
 <app-search/>
 <div *ngFor="let movie of movies" style="margin-left: 5%; margin-right: 5%;" >
     <app-movie-card [movie]="movie"></app-movie-card>
-
 </div>
