--- a/cloud-front/src/app/modules/movie/upload-movie/upload-movie.component.html
+++ b/cloud-front/src/app/modules/movie/upload-movie/upload-movie.component.html
@@ -1,4 +1,5 @@
 <!--<p>upload-movie works!</p>-->
+<app-navbar></app-navbar>
 <div class="form-container">
   <h1>Add a New Movie</h1>
   <form (ngSubmit)="onSubmit()">
