--- a/cloud-front/src/app/modules/movie/movie-details/movie-details.component.css
+++ b/cloud-front/src/app/modules/movie/movie-details/movie-details.component.css
@@ -80,3 +80,38 @@ body {
 .movie-button:hover {
   opacity: 0.8;
 }
+
+.movie-rating {
+  margin-top: 20px;
+}
+
+.movie-rating label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.rating-container {
+  display: flex;
+  align-items: center;
+}
+
+.rating-container select {
+  padding: 8px;
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.rating-container button {
+  padding: 8px 15px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.rating-container button:hover {
+  background-color: #0056b3;
+}
