--- a/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
+++ b/cloud-front/src/app/modules/movie/movie-details/movie-details.component.html
@@ -19,6 +19,21 @@
       <button *ngIf="role === 'admin'"  class="movie-button" (click)="edit()">Edit</button>
       <button *ngIf="role === 'admin'"  class="movie-button" (click)="delete()">Delete</button>
       <button *ngIf="role === 'user'" class="movie-button" (click)="download()">Download</button>
+<!--      <button *ngIf="role === 'user'" class="movie-button" (click)="review()">Review</button>-->
+    </div>
+  </div>
+  <div class="movie-rating">
+    <label for="rating">Oceni sadržaj:</label>
+    <div class="rating-container">
+      <select id="rating" name="rating" [(ngModel)]="selectedRating">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
+      <button class="movie-button" (click)="rateContent()">Oceni sadržaj</button>
     </div>
   </div>
 </div>
+
